[project]
dependencies = [
    'tortoise-orm',
    'tgcrypto-pyrofork',
    'pyrofork',
    'rich',
]
name = 'reposter'
version = '24.2.0'
description = 'python script for reposting telegram messages'
readme = 'readme.md'
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[project.urls]
repo = 'https://github.com/gmankab/reposter'

[project.optional-dependencies]
tests = [
    'pyright',
    'ruff',
]
build = [
    'setuptools',
    'twine',
    'build',
]

[project.scripts]
reposter = 'reposter.__main__:main'

[tool.pyright]
venvPath = '.'
venv = '.venv'

[tool.setuptools.packages.find]
where = ['.']

