[project]
dependencies = [
    'tortoise-orm',
    'tgcrypto-pyrofork',
    'pyrofork',
    'rich',
]
name = 'reposter'
version = '24.3.4'
description = 'userbot that forwards messages from telegram channels to others in real time'
readme = 'readme.md'
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: GNU Affero General Public License v3',
]

[project.urls]
repo = 'https://github.com/gmankab/reposter'

[project.optional-dependencies]
tests = [
    'pyright',
    'ruff',
]
build = [
    'setuptools',
    'twine',
    'build',
]

[project.scripts]
reposter = 'reposter.__main__:main'

[tool.pyright]
venvPath = '.'
venv = '.venv'

[tool.setuptools.packages.find]
where = ['.']

